Update files for extract israel-and-palestine

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-TARGET=taiwan.osm.pbf
-GEOFABRIK_DOWNLOAD_URL=https://download.geofabrik.de/asia/taiwan-latest.osm.pbf
-POLY_FILE=resources/taiwan.poly
+TARGET=israel-and-palestine.osm.pbf
+GEOFABRIK_DOWNLOAD_URL=https://download.geofabrik.de/asia/israel-and-palestine-latest.osm.pbf
+POLY_FILE=resources/israel-and-palestine.poly
 TILEMAKER_CONFIG=resources/config-openmaptiles.json
 TILEMAKER_PROCESS=resources/process-openmaptiles.lua
